tests/baselines/reference/asiPreventsParsingAsInterface04.errors.txt
asiPreventsParsingAsInterface04.ts(1,23): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
asiPreventsParsingAsInterface04.ts(4,1): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.


==== asiPreventsParsingAsInterface04.ts (2 errors) ====
    var declare: boolean, interface: number, I: string;
                          ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
    
    declare     // This should be the identifier 'declare'
    interface   // This should be the identifier 'interface'
    ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
    I           // This should be the identifier 'I'
    {}          // This should be a block body